--- a/project/ndaparser/templates/ndaparser/admin/upload.html
+++ b/project/ndaparser/templates/ndaparser/admin/upload.html
@@ -15,7 +15,11 @@
     <div id="content-main">
         <div class="module">
         {% if transactions %}
-            <p>TODO: List transactions</p>
+            <ul>
+            {% for t in transactions %}
+                <li> {{ t }}</li>
+            {% endfor%}
+            </ul>
         {% else %}
             {% if not form %}
                 <p>No form and no transactions, something is fucky</p>
