Add styling for required fields in the signup form
Fixes #105

--- a/project/asylum/static_src/less/style.less
+++ b/project/asylum/static_src/less/style.less
@@ -58,3 +58,8 @@
 
 // Vendor styles
 @import "@{fa-path}/font-awesome.less";
+
+.form-group.required .control-label:after {
+    content:" *";
+    color:red;
+}
